<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Gateway</string>
    <string name="hello_world">Parawebs SMS Gateway</string>
    <string name="action_settings">Settings</string>
    <string name="gateway">Start</string>
    <string name="mainswi">Start Server</string>
    <string name="logo">Parawebs Logo</string>
    <string name="tex_url">Url Callback</string>
    <string name="set_settings">Set</string>
    <string name="port_label">Port</string>
    <string name="port_input">5000</string>
    <string name="cancel">Cancel</string>
    <string name="count">0</string>
    <string name="label_count">Sended messages:</string>
    <string name="failes_label">Failed:</string>
    <string name="fail_count">0</string>
    <string name="url_dest">Server Offline</string>
    <string name="dest_label">Current Url:</string>

</resources>
