<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:text="@string/port_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="13sp"
        android:typeface="serif"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:text="@string/tex_url"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="13sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/editText_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/button_accept"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_settings"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/button_cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>